--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ div.block div.item:not(.current) a.item-link { }</code></pre>
 
 .element:hover {
 	background-color: #c80000;
-    }</code></pre>
+	}</code></pre>
 						</li>
 						<li class="fragment">
                             <pre><code class="css">.element {
@@ -498,13 +498,13 @@ div.block div.item:not(.current) a.item-link { }</code></pre>
 					<ul>
 						<li class="fragment is-line-through">
                             <pre><code class="css">.dropdown {
-    top: 24px;
-    }</code></pre>
+	top: 24px;
+	}</code></pre>
 						</li>
 						<li class="fragment">
                             <pre><code class="css">.dropdown {
-    top: 100%;
-    }</code></pre>
+	top: 100%;
+	}</code></pre>
 						</li>
 					</ul>
 				</section>
@@ -623,14 +623,14 @@ div.block div.item:not(.current) a.item-link { }</code></pre>
 					<ul>
 						<li class="fragment is-line-through">
                             <pre><code class="css">.dropdown {
-    box-shadow: inset 0 -3px #aaa, 0 2px #eee;
-    }</code></pre>
+	box-shadow: inset 0 -3px #aaa, 0 2px #eee;
+	}</code></pre>
 						</li>
 						<li class="fragment">
                             <pre><code class="css">.dropdown {
-    box-shadow: inset 0 -3px #aaa,
-                      0  2px #eee;
-    }</code></pre>
+	box-shadow: inset 0 -3px #aaa,
+	                  0  2px #eee;
+	}</code></pre>
 						</li>
 					</ul>
 				</section>
@@ -653,7 +653,7 @@ div.block div.item:not(.current) a.item-link { }</code></pre>
 
 				<section data-state="css-rules-not-all">
 					<h3>That is not all...</h3>
-					<div><a href="http://pepelsbey.net/pres/css-management/" target="_blank">CSS Menegement</a></div>
+					<div><a href="http://pepelsbey.net/pres/css-management/" target="_blank">CSS Management &mdash; Vadim Makeev</a></div>
 				</section>
 
 				<section data-state="css-rules-comparison">
@@ -708,21 +708,21 @@ div.block div.item:not(.current) a.item-link { }</code></pre>
 				<section data-state="css-rules-order">
 					<h3>CSS Rules Order</h3>
 					<pre><code class="css">.dropdown {
-	// Common behavior rules
+    // Common behavior rules
 	position: absolute;
 	left: 0;
 	top: 100%;
-	// Box model & dimensions
+    // Box model & dimensions
 	width: 200px;
 	min-height: 300px;
 	margin: 3px 0;
 	border: 1px solid #b9b9b9;
-	// Visual rules applied to box
+    // Visual rules applied to box
 	overflow: hidden; /* for text overflow prevention */
 	box-shadow: inset 0 -3px #aaa,
 	0  2px #eee;
 	background-color: #fff;
-	// Visual rules applied to content
+    // Visual rules applied to content
 	color: #333;
 	}</code></pre>
 					<div class="fragment"><a href="http://csscomb.com" target="_blank">csscomb.com</a></div>
